Customized alacrity and fastfetch

--- a/config/.config/fastfetch/config.jsonc
+++ b/config/.config/fastfetch/config.jsonc
@@ -123,5 +123,8 @@
             "format": "\u001b[90m└────────────────────────────────────────────────────┘"
         },
         "break",
+		  {
+				"type": "colors",
+		  },
     ]
 }
