--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -5,6 +5,7 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 10.0
+window_padding_width 16
 
 foreground       #f8f8f2
 background       #14101b
