--- a/config/.config/alacritty/alacritty.toml
+++ b/config/.config/alacritty/alacritty.toml
@@ -5,8 +5,8 @@
 [window]
 opacity = 0.8
 
-padding.x = 10
-padding.y = 10
+# padding.x = 10
+# padding.y = 10
 
 decorations = "Transparent"
 decorations_theme_variant = "Dark"
