--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,6 +36,7 @@ monitor=,1920x1080@60,0x0,1
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
+$screenShot = hyprshot
 
 
 #################
@@ -47,7 +48,7 @@ $menu = rofi -show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & swaync
 
 
 #############################
@@ -240,11 +241,18 @@ bind = $mainMod, P, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
+# Screen Shots
+bind = , PRINT, exec, $screenShot -m window
+bind = SHIFT, PRINT, exec, $screenShot -m region
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
 bind = $mainMod, h, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Config utilities
+bind = $mainMod SHIFT, B, exec, ~/.dotfiles/.config/hypr/reload.sh
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
