--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -87,13 +87,13 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
 	gaps_in = 5
-	gaps_out = 10
+	gaps_out = 2
 
 	border_size = 2
 
 	# https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
 	col.active_border = rgba(4b4673ff)
-	col.inactive_border = rgba(2d2a45aa)
+	col.inactive_border = rgba(2d2a45dc)
 
 	# Set to true enable resizing windows by clicking and dragging on borders and gaps
 	resize_on_border = false
@@ -111,13 +111,13 @@ decoration {
 
 	# Change transparency of focused and unfocused windows
 	active_opacity = 1.0
-	inactive_opacity = 0.95
+	inactive_opacity = 0.90
 
 	shadow {
 		enabled = false
-		# range = 4
-		# render_power = 3
-		# color = rgba(1a1a1aee)
+		range = 4
+		render_power = 3
+		color = rgba(ffffffff)
 	}
 
 	# https://wiki.hypr.land/Configuring/Variables/#blur
