--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -6,30 +6,56 @@
 
 	/* --- Left --- */
 
-	"modules-left": ["hyprland/window"],
+	"modules-left": ["hyprland/window", "cpu", "memory"],
 	"hyprland/window": {
-		"align": 0,
+		"justify": "center",
 		"format": "{class}",
+		"tooltip": false,
 		"icon": true,
 		"icon-size": 14
 	},
 
+	"cpu": {
+		"interval": 10,
+		"tooltip": false,
+		"format": " {usage}%"
+	},
+
+	"memory": {
+		"format": " {used:0.1f}Gb",
+		"justify": "center",
+		"tooltip": false,
+		"states": {
+			"warning": 80,
+			"critical": 90
+		}
+	},
 	/* --- Center --- */
 
 	"modules-center": ["hyprland/workspaces","hyprland/mode"],
 
 	/* --- Right --- */
 
-	"modules-right": ["memory","battery","clock"],
-	"memory": {
-		"format": "{used:0.1f}Gb/32Gb 󰍛",
-		"states": {
-			"warning": 80,
-			"critical": 90
-		}
+	"modules-right": ["pulseaudio", "backlight", "battery", "clock"],
+
+	"pulseaudio": {
+		"format": "{volume}% {icon}",
+		"format-muted": "󰖁",
+		"format-icons": ["󰕿", "󰖀", "󰕾"],
+		"tooltip": false
 	},
+
+	"backlight": {
+		"justify": "center",
+		"format": "{percent}% {icon}",
+		"format-icons": ["󰛩", "󱩑", "󱩖"],
+		"tooltip": false
+	},
+
 	"battery": {
 		"format": "{capacity}% {icon}",
+		"justify": "center",
+		"tooltip": false,
 		"format-icons": {
 			"default":  ["󰂎", "󱊡", "󱊢", "󱊣"],
 			"charging": ["󰢟", "󱊤", "󱊥", "󱊦"]
@@ -39,8 +65,10 @@
 			"critical": 20
 		}
 	},
+
 	"clock": {
 		"format": "{:%a %b(%m) %d %Y 󰸗 | %I:%M%p 󰥔}",
-		"tooltip-format": null
+		"justify": "center",
+		"tooltip": false
 	}
 }
