--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,8 +244,9 @@ bind = $mainMod, P, exec, $menu
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Screen Shots
-bind = , PRINT, exec, $screenShot -m window
-bind = SHIFT, PRINT, exec, $screenShot -m region
+bind = , PRINT, exec, $screenShot -m region
+bind = SHIFT, PRINT, exec, $screenShot -m window -m active
+bind = CONTROL, PRINT, exec, $screenShot -m output -m active
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
