--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -67,7 +67,7 @@
 	},
 
 	"clock": {
-		"format": "{:%a %m/%d/%y 󰸗 %I:%M%p 󰥔}",
+		"format": "{:%a %b(%m) %d %y 󰸗 | %I:%M%p 󰥔}",
 		"justify": "center",
 		"tooltip": false
 	}
