--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,6 +34,7 @@ monitor=,1920x1080@60,0x0,1
 
 # Set programs that you use
 $terminal = kitty
+$browser = firefox
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
@@ -237,9 +238,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, P, exec, $menu
+bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, B, exec, $browser
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
