--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -109,7 +109,7 @@ general {
 decoration {
 	rounding = 2
 	rounding_power = 2
-
+	
 	# Change transparency of focused and unfocused windows
 	active_opacity = 1.0
 	inactive_opacity = 0.90
@@ -186,6 +186,7 @@ master {
 misc {
 	# force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 	disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+	vfr = true
 }
 
 
@@ -198,7 +199,7 @@ input {
 	kb_layout = us
 	kb_variant =
 	kb_model =
-	kb_options =
+	kb_options = caps:swapescape
 	kb_rules =
 	repeat_delay = 400
 	repeat_rate = 30
@@ -273,16 +274,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -303,6 +304,7 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl set 2%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl set 2%-
+bindl = , switch:on:Lid Switch, exec, hyprlock
 
 # Requires playerctl
 # bindl = , XF86AudioNext, exec, playerctl next
