--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -111,33 +111,33 @@ animations {
 
 	# Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
 
-	bezier = easeOutQuint,0.23,1,0.32,1
+	bezier = easeOutQuintReallyOver,		0.23,1,0.32,7.0
+	bezier = easeOutQuintOver,				0.23,1,0.32,1.15
+
+	bezier = easeOutQuint,0.23,1,0.32,1.0
 	bezier = easeInOutCubic,0.65,0.05,0.36,1
+
 	bezier = linear,0,0,1,1
 	bezier = almostLinear,0.5,0.5,0.75,1.0
 	bezier = quick,0.15,0,0.1,1
 
-	animation = global, 1, 10, default
-	animation = border, 1, 5.39, easeOutQuint
-	
-	animation = windows, 1, 4.79, easeOutQuint
-	animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-	animation = windowsOut, 1, 1.49, linear, popin 87%
-
-	animation = fadeIn, 1, 1.73, almostLinear
-	animation = fadeOut, 1, 1.46, almostLinear
-	animation = fade, 1, 3.03, quick
-
-	animation = layers, 1, 3.81, easeOutQuint
-	animation = layersIn, 1, 4, easeOutQuint, fade
-	animation = layersOut, 1, 1.5, linear, fade
-	animation = fadeLayersIn, 1, 1.79, almostLinear
-	animation = fadeLayersOut, 1, 1.39, almostLinear
-
-	$workspacespeed = 4.0
-	animation = workspaces, 1, $workspacespeed, almostLinear, slidefade
-	animation = workspacesIn, 1, $workspacespeed, almostLinear, slidefade
-	animation = workspacesOut, 1, $workspacespeed, almostLinear, slidefade
+	animation = global, 			1, 1.0, 		default
+	animation = border, 			1, 8.4,	 	easeOutQuintReallyOver
+	animation = windows, 		1, 4.8,	 	easeOutQuint, 	popin
+	animation = fade, 			1, 5.0, 		quick
+	animation = windowsIn, 		1, 4.0, 		easeOutQuintOver, 	popin
+	animation = fadeIn, 			1, 5.0, 		almostLinear
+	animation = windowsOut, 	1, 4.5,	 	linear, 			popin
+	animation = fadeOut, 		1, 5.0, 		almostLinear
+	# animation = layers, 			1, 3.81, 	easeOutQuint
+	# animation = layersIn, 		1, 4, 		easeOutQuint, 	fade
+	# animation = fadeLayersIn, 	1, 1.79, 	almostLinear
+	# animation = layersOut, 		1, 1.5, 		linear, fade
+	# animation = fadeLayersOut, 1, 1.39, 	almostLinear
+	$workspacespeed = 5.0
+	animation = workspaces, 	1, $workspacespeed, almostLinear, slidefade 100%
+	animation = workspacesIn, 	1, $workspacespeed, almostLinear, slidefade 100%
+	animation = workspacesOut, 1, $workspacespeed, almostLinear, slidefade 100%
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
