--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -123,17 +123,19 @@ animations {
 
 	animation = global, 			1, 1.0, 		default
 	animation = border, 			1, 8.4,	 	easeOutQuintReallyOver
+
 	animation = windows, 		1, 4.8,	 	easeOutQuint, 	popin
 	animation = fade, 			1, 5.0, 		quick
 	animation = windowsIn, 		1, 4.0, 		easeOutQuintOver, 	popin
 	animation = fadeIn, 			1, 5.0, 		almostLinear
 	animation = windowsOut, 	1, 4.5,	 	linear, 			popin
 	animation = fadeOut, 		1, 5.0, 		almostLinear
-	# animation = layers, 			1, 3.81, 	easeOutQuint
-	# animation = layersIn, 		1, 4, 		easeOutQuint, 	fade
-	# animation = fadeLayersIn, 	1, 1.79, 	almostLinear
-	# animation = layersOut, 		1, 1.5, 		linear, fade
-	# animation = fadeLayersOut, 1, 1.39, 	almostLinear
+
+	animation = layers, 			1, 3.81, 	easeOutQuint
+	animation = layersIn, 		1, 4, 		easeOutQuint, 	fade
+	animation = fadeLayersIn, 	1, 1.79, 	almostLinear
+	animation = layersOut, 		1, 1.5, 		linear, fade
+	animation = fadeLayersOut, 1, 1.39, 	almostLinear
 	$workspacespeed = 5.0
 	animation = workspaces, 	1, $workspacespeed, almostLinear, slidefade 100%
 	animation = workspacesIn, 	1, $workspacespeed, almostLinear, slidefade 100%
