--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,7 +180,9 @@ input {
 	kb_layout = us, gr
 	kb_variant = altgr-intl
 	kb_model =
-	kb_options = caps:swapescape, grp:alt_shift_toggle
+	kb_options =\
+		caps:swapescape, \
+		grp:rshift_toggle #options in /usr/share/X11/xkb/rules/base.lst
 	kb_rules =
 	repeat_delay = 400
 	repeat_rate = 30
@@ -228,11 +230,11 @@ bindo = $windowMod SHIFT, backspace, exec, poweroff
 bindr = $windowMod SHIFT, backspace, exit,
 
 # Program Binds
-bind = $windowMod, C, killactive,
-bind = $windowMod, RETURN, exec, $terminal
-bind = $windowMod, E, exec, $fileManager
-bind = $windowMod, P, exec, $menu
-bind = $windowMod, B, exec, $browser
+bind = $workspaceMod, C, killactive,
+bind = $workspaceMod, RETURN, exec, $terminal
+bind = $workspaceMod, E, exec, $fileManager
+bind = $workspaceMod, P, exec, $menu
+bind = $workspaceMod, B, exec, $browser
 
 # Screen Shots
 bind = , PRINT, exec, $screenShot -m region -z
@@ -294,4 +296,3 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 # Custom
 windowrule = opacity 1.0 override 1.0 override, class:^(vesktop)$
-
