Changed keybindings, bindr super to menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ $screenShot = hyprshot
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & swaync & hypridle & xwaylandvideobridge &
+exec-once = waybar & hyprpaper & swaync & hypridle &
 
 
 #############################
@@ -219,21 +219,21 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $windowMod = SUPER # Sets "Windows" key as main modifier
 $workspaceMod = ALT # Sets the workspace modifier
-# REMEMBER: ALT+SHIFT WILL SWITCH THE KEYBOARD LAYOUT
 
 # Config utilities
-bind = $windowMod ALT, B, exec, killall waybar && waybar &
-bind = $windowMod ALT, B, exec, killall swaync && swaync &
-bind = $windowMod ALT, B, exec, killall hypridle && hypridle &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall waybar && waybar &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync && swaync &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle && hypridle &
 
 bindo = $windowMod SHIFT, backspace, exec, poweroff
 bindr = $windowMod SHIFT, backspace, exit,
 
 # Program Binds
 bind = $workspaceMod, C, killactive,
+bind = $workspaceMod CONTROL, C, forcekillactive,
 bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
-bind = $workspaceMod, P, exec, $menu
+bindr = SUPER, SUPER_L, exec, $menu
 bind = $workspaceMod, B, exec, $browser
 
 # Screen Shots
@@ -242,27 +242,24 @@ bind = SHIFT, PRINT, exec, $screenShot -m window -m active -z
 bind = CONTROL, PRINT, exec, $screenShot -m output -m active -z
 
 # Window management
-bind = $windowMod, l, cyclenext
-bind = $windowMod, h, cyclenext, prev
-bind = $windowMod SHIFT, l, swapnext
-bind = $windowMod SHIFT, h, swapnext, prev
+bind = $workspaceMod, k, cyclenext
+bind = $workspaceMod, j, cyclenext, prev
+bind = $workspaceMod SHIFT, k, swapnext
+bind = $workspaceMod SHIFT, j, swapnext, prev
 
-binde = $windowMod CONTROL, l, resizeactive,  20  0
-binde = $windowMod CONTROL, h, resizeactive, -20  0
-binde = $windowMod CONTROL, j, resizeactive,  0   20
-binde = $windowMod CONTROL, k, resizeactive,  0  -20
+binde = $windowMod, l, resizeactive,  20  0
+binde = $windowMod, h, resizeactive, -20  0
+binde = $windowMod, j, resizeactive,  0   20
+binde = $windowMod, k, resizeactive,  0  -20
 
 bind = $windowMod, s, togglesplit, # dwindle
 # bind = $windowMod, V, togglefloating,
 # bind = $windowMod, P, pseudo, # dwindle
 
-# Switch workspaces with windowMod + [0-9]
 bind = $workspaceMod, l, workspace, +1
 bind = $workspaceMod, h, workspace, -1
-
-# Move active window to a workspace with windowMod + SHIFT + [0-9]
-bind = $workspaceMod CONTROL, l, movetoworkspacesilent, +1
-bind = $workspaceMod CONTROL, h, movetoworkspacesilent, -1
+bind = $workspaceMod SHIFT, l, movetoworkspacesilent, +1
+bind = $workspaceMod SHIFT, h, movetoworkspacesilent, -1
 
 
 # Laptop multimedia keys for volume and LCD brightness
