Removed bindr super to menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -233,7 +233,7 @@ bind = $workspaceMod, C, killactive,
 bind = $workspaceMod CONTROL, C, forcekillactive,
 bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
-bindr = SUPER, SUPER_L, exec, $menu
+bind = $workspaceMod, P, exec, $menu
 bind = $workspaceMod, B, exec, $browser
 
 # Screen Shots
