More keybinds, move windows with windowmod shift lhjk

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -229,8 +229,8 @@ bindo = $windowMod SHIFT, backspace, exec, poweroff
 bindr = $windowMod SHIFT, backspace, exit,
 
 # Program Binds
-bind = $workspaceMod, C, killactive,
-bind = $workspaceMod CONTROL, C, forcekillactive,
+bindp = $workspaceMod, C, killactive,
+bindp = $workspaceMod CONTROL, C, forcekillactive,
 bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
@@ -244,8 +244,14 @@ bind = CONTROL, PRINT, exec, $screenShot -m output -m active -z
 # Window management
 bind = $workspaceMod, k, cyclenext
 bind = $workspaceMod, j, cyclenext, prev
-bind = $workspaceMod SHIFT, k, swapnext
-bind = $workspaceMod SHIFT, j, swapnext, prev
+
+bind = $windowMod SHIFT, l, movewindow, r
+bind = $windowMod SHIFT, h, movewindow, l
+bind = $windowMod SHIFT, j, movewindow, d
+bind = $windowMod SHIFT, k, movewindow, u
+
+# bind = $workspaceMod SHIFT, k, swapnext
+# bind = $workspaceMod SHIFT, j, swapnext, prev
 
 binde = $windowMod, l, resizeactive,  20  0
 binde = $windowMod, h, resizeactive, -20  0
