--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -124,15 +124,15 @@ animations {
 	animation = global, 			1, 1.0, 		default
 	animation = border, 			1, 8.4,	 	easeOutQuintReallyOver
 
-	animation = windows, 		1, 4.8,	 	easeOutQuint, 	popin
+	animation = windows, 		1, 4.8,	 	easeOutQuint,			slide
 	animation = fade, 			1, 5.0, 		quick
 	animation = windowsIn, 		1, 4.0, 		easeOutQuintOver, 	popin
 	animation = fadeIn, 			1, 5.0, 		almostLinear
-	animation = windowsOut, 	1, 4.5,	 	linear, 			popin
-	animation = fadeOut, 		1, 5.0, 		almostLinear
+	animation = windowsOut, 	1, 3.5,	 	linear, 					popin
+	animation = fadeOut, 		1, 3.0, 		almostLinear
 
 	animation = layers, 			1, 3.81, 	easeOutQuint
-	animation = layersIn, 		1, 4, 		easeOutQuint, 	fade
+	animation = layersIn, 		1, 4, 		easeOutQuint, 			fade
 	animation = fadeLayersIn, 	1, 1.79, 	almostLinear
 	animation = layersOut, 		1, 1.5, 		linear, fade
 	animation = fadeLayersOut, 1, 1.39, 	almostLinear
