Added neovim shortcut to hypr

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ monitor=,1920x1080@60,0x0,1
 # Set programs that you use
 $terminal = kitty
 $browser = firefox
+$texteditor = nvim
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
@@ -234,7 +235,10 @@ bindp = $workspaceMod CONTROL, C, forcekillactive,
 bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
-bind = $workspaceMod, B, exec, $browser
+
+bind = $workspaceMod, F, exec, $browser
+bind = $workspaceMod, N, exec, $terminal $texteditor
+
 
 # Screen Shots
 bind = , PRINT, exec, $screenShot -m region -z
