--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,8 @@ monitor=,1920x1080@60,0x0,1
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
+$launch_term = $terminal -e
 $browser = firefox
 $texteditor = nvim
 $fileManager = dolphin
@@ -237,7 +238,7 @@ bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
 
 bind = $workspaceMod, F, exec, $browser
-bind = $workspaceMod, N, exec, $terminal $texteditor
+bind = $workspaceMod, N, exec, $launch_term $texteditor
 
 
 # Screen Shots
