--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ $texteditor = nvim
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
+$widgets = qs
 
 
 #################
@@ -31,7 +32,7 @@ $screenShot = hyprshot
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & swaync & hypridle &
+exec-once = $widgets & hyprpaper & swaync & hypridle &
 
 
 #############################
@@ -223,9 +224,10 @@ $windowMod = SUPER # Sets "Windows" key as main modifier
 $workspaceMod = ALT # Sets the workspace modifier
 
 # Config utilities
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall waybar && waybar &
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync && swaync &
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle && hypridle &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall waybar #&& waybar &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync; swaync &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle; hypridle &
 
 bindo = $windowMod SHIFT, backspace, exec, poweroff
 bindr = $windowMod SHIFT, backspace, exit,
@@ -239,7 +241,6 @@ bind = $workspaceMod, P, exec, $menu
 
 bind = $workspaceMod, F, exec, $browser
 bind = $workspaceMod, N, exec, $launch_term $texteditor
-
 
 # Screen Shots
 bind = , PRINT, exec, $screenShot -m region -z
