--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -305,3 +305,4 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 # Custom
 windowrule = opacity 1.0 override 1.0 override, class:^(vesktop)$
+windowrule = opacity 1.0 override 1.0 override, class:^(legcord)$
