--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ $texteditor = nvim
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
-$widgets = qs
+$widgets = waybar
 
 
 #################
@@ -224,13 +224,13 @@ $windowMod = SUPER # Sets "Windows" key as main modifier
 $workspaceMod = ALT # Sets the workspace modifier
 
 # Config utilities
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall waybar #&& waybar &
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets && $widgets &
+# bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync; swaync &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle; hypridle &
 
-bindo = $windowMod SHIFT, backspace, exec, poweroff
-bindr = $windowMod SHIFT, backspace, exit,
+bindo = $workspace SHIFT, backspace, exec, poweroff
+bindr = $workspace SHIFT, backspace, exit,
 
 # Program Binds
 bindp = $workspaceMod, C, killactive,
