--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -224,7 +224,7 @@ $windowMod = SUPER # Sets "Windows" key as main modifier
 $workspaceMod = ALT # Sets the workspace modifier
 
 # Config utilities
-bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets && $widgets &
+bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
 # bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync; swaync &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle; hypridle &
