Switched widgets back to qs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ $texteditor = nvim
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
-$widgets = waybar
+$widgets = qs
 
 
 #################
