Launching neovim now sets class to neovim

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,9 +14,8 @@ monitor=,1920x1080@60,0x0,1
 
 # Set programs that you use
 $terminal = alacritty
-$launch_term = $terminal -e
 $browser = firefox
-$texteditor = nvim
+$texteditor = $terminal --class neovim -e nvim
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenShot = hyprshot
@@ -240,7 +239,7 @@ bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
 
 bind = $workspaceMod, F, exec, $browser
-bind = $workspaceMod, N, exec, $launch_term $texteditor
+bind = $workspaceMod, N, exec, $texteditor
 
 # Screen Shots
 bind = , PRINT, exec, $screenShot -m region -z
