--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,8 +16,10 @@ monitor=,1920x1080@60,0x0,1
 $terminal = alacritty
 $browser = firefox
 $texteditor = $terminal --class neovim -e nvim
+$resources = $terminal --class bottom -e btm
 $fileManager = dolphin
 $menu = rofi -show drun
+$calculator = rofi -show calc -no-show-match -no-sort
 $screenShot = hyprshot
 $widgets = qs
 
@@ -238,8 +240,10 @@ bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
 
+bind = $workspaceMod, space, exec, $calculator
 bind = $workspaceMod, F, exec, $browser
 bind = $workspaceMod, N, exec, $texteditor
+bind = $workspaceMod, B, exec, $resources
 
 # Screen Shots
 bind = , PRINT, exec, $screenShot -m region -z
@@ -247,8 +251,8 @@ bind = SHIFT, PRINT, exec, $screenShot -m window -m active -z
 bind = CONTROL, PRINT, exec, $screenShot -m output -m active -z
 
 # Window management
-bind = $workspaceMod, k, cyclenext
-bind = $workspaceMod, j, cyclenext, prev
+bind = $workspaceMod, j, cyclenext
+bind = $workspaceMod, k, cyclenext, prev
 
 bind = $windowMod SHIFT, l, movewindow, r
 bind = $windowMod SHIFT, h, movewindow, l
