changed keybind for closing hyprland and poweroff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -230,8 +230,8 @@ bind = SHIFT CONTROL SUPER ALT, B, exec, killall $widgets; $widgets &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall swaync; swaync &
 bind = SHIFT CONTROL SUPER ALT, B, exec, killall hypridle; hypridle &
 
-bindo = $workspace SHIFT, backspace, exec, poweroff
-bindr = $workspace SHIFT, backspace, exit,
+bindo = CONTROL SHIFT, backspace, exec, poweroff
+bindr = CONTROL SHIFT, backspace, exit,
 
 # Program Binds
 bindp = $workspaceMod, C, killactive,
