Fixed hyprland and hyprpaper issues

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -204,9 +204,9 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-	workspace_swipe = false
-}
+# gestures {
+# 	workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -297,15 +297,11 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+windowrule {
+	# Ignore maximize requests from all apps. You'll probably like this.
+	name = suppress-maximize-events
+	match:class = .*
+	
+	suppress_event = maximize
+} 
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# Custom
-windowrule = opacity 1.0 override 1.0 override, class:^(vesktop)$
-windowrule = opacity 1.0 override 1.0 override, class:^(legcord)$
