Modified hyprland config, fixed .zshrc alias for starting hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,8 +18,7 @@ $browser = firefox
 $texteditor = $terminal --class neovim -e nvim
 $resources = $terminal --class bottom -e btm
 $fileManager = dolphin
-$menu = rofi -show drun
-$calculator = rofi -show calc -no-show-match -no-sort
+$menu = hyprlauncher
 $screenShot = hyprshot
 $widgets = qs
 
@@ -168,11 +167,11 @@ master {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-	# force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-	disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-	vfr = true
-}
+# misc {
+# 	# force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+# 	disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+# 	vfr = true
+# }
 
 
 #############
@@ -210,10 +209,10 @@ input {
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-	name = epic-mouse-v1
-	sensitivity = -0.5
-}
+# device {
+# 	name = epic-mouse-v1
+# 	sensitivity = -0.5
+# }
 
 
 ###################
@@ -240,7 +239,6 @@ bind = $workspaceMod, RETURN, exec, $terminal
 bind = $workspaceMod, E, exec, $fileManager
 bind = $workspaceMod, P, exec, $menu
 
-bind = $workspaceMod, space, exec, $calculator
 bind = $workspaceMod, F, exec, $browser
 bind = $workspaceMod, N, exec, $texteditor
 bind = $workspaceMod, B, exec, $resources
